--- a/sdk/lib/Cargo.toml
+++ b/sdk/lib/Cargo.toml
@@ -20,4 +20,4 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 urlencoding = "2"
 
-webhook-flows-macros = { path = "../macros" }
+webhook-flows-macros = { version = "0.1.0", path = "../macros" }
