--- a/sdk/macros/Cargo.toml
+++ b/sdk/macros/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "webhook-flows-macros"
-version = "0.2.0"
+version = "0.2.1"
 edition = "2021"
 license = "MIT/Apache-2.0"
 description = "Webhook Integration macros for flows.network"
@@ -14,6 +14,7 @@ proc-macro = true
 [dependencies]
 proc-macro2 = "1"
 quote = "1"
+rand = "0.8.5"
 serde_json = "1"
 syn = { version = "2.0", features = ["full"] }
 
