--- a/sdk/lib/Cargo.toml
+++ b/sdk/lib/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "webhook-flows"
-version = "0.4.1"
+version = "0.4.2"
 edition = "2021"
 license = "MIT/Apache-2.0"
 description = "Webhook integration for flows.network"
@@ -14,10 +14,12 @@ crate-type = ["lib", "cdylib"]
 default-target = "wasm32-wasi"
 
 [dependencies]
+http = "0.2.9"
 http_req_wasi = "0.11"
 lazy_static = "1"
+matchit = "0.7.3"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 urlencoding = "2"
 
-webhook-flows-macros = { version = "0.2.1", path = "../macros" }
+webhook-flows-macros = { version = "0.2.2", path = "../macros" }
